Added maven memory specification directly to pom file
Change-Id: I1f4f76e58cefb73df650592219ef0c7ae4c67596
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/6855
Tested-by: jenkins
Reviewed-by: Alexander Leblang <alex.leblang@cloudera.com>